--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,28 @@
 <!doctype html>
 <html>
   <head>
+      <meta
+        name="viewport"
+        content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
+      />
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+ 
     <title>Kid Dash</title>
+    <style>
+      body {
+        background-image: url("Free-Chalkboard-Backgrounds.jpg");
+        background-repeat: no-repeat;
+        /* background-color: black; */
+
+      }
+    </style>
   </head>
   <body>
     <div id='App'></div>
     <script src="bundle.js"></script>
+    
   </body>
 </html>
