--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
       body {
         background-image: url("Free-Chalkboard-Backgrounds.jpg");
         background-repeat: no-repeat;
+        background-size: cover;
+        height: 100%;
         /* background-color: black; */
 
       }
