Update background styling detail

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,9 @@
       body {
         background-image: url("Free-Chalkboard-Backgrounds.jpg");
         background-repeat: no-repeat;
-        background-size: cover;
-        height: 100%;
+        background-size: auto auto;
+        height: 100vh;
+
         /* background-color: black; */
 
       }
