--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <style>
       body {
         background-image: url("Free-Chalkboard-Backgrounds.jpg");
-        background-repeat: no-repeat;
+        background-repeat: repeat;
         background-size: auto auto;
         height: 100vh;
 
