--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="./style.css">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <meta name="google-signin-client_id" content="575440888732-lst2joh94qfn4tcv7ae17sbos4cbikk9.apps.googleusercontent.com">
+
 
   <title>Kid Dash</title>
   <style>
@@ -27,7 +30,15 @@
   <div id="modal"></div>
   <div id='App'></div>
   <script src="bundle.js"></script>
-
+  <a href="#" onclick="signOut();">Sign out</a>
+  <script>
+    function signOut() {
+      var auth2 = gapi.auth2.getAuthInstance();
+      auth2.signOut().then(function () {
+        console.log('User signed out.');
+      });
+    }
+  </script>
 </body>
 
 </html>
