--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,9 @@
   <div id="modal"></div>
   <div id='App'></div>
   <script src="bundle.js"></script>
-  <a href="#" onclick="signOut();">Sign out</a>
+  <div style="margin-top: 500px">
+    <a href="#" onclick="signOut();">Sign out</a>
+  </div>
   <script>
     function signOut() {
       var auth2 = gapi.auth2.getAuthInstance();
